--- a/pom.xml
+++ b/pom.xml
@@ -107,14 +107,9 @@
       <version>2.11.0</version>
     </dependency>
     <dependency>
-      <groupId>com.google.api-client</groupId>
-      <artifactId>google-api-client</artifactId>
-      <version>1.35.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.auth</groupId>
-      <artifactId>google-auth-library-oauth2-http</artifactId>
-      <version>1.7.0</version>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-bigquery</artifactId>
+      <version>2.29.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.http-client</groupId>
@@ -125,11 +120,6 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>32.0.1-jre</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.apis</groupId>
-      <artifactId>google-api-services-bigquery</artifactId>
-      <version>v2-rev20220611-1.32.1</version>
     </dependency>
     <dependency>
       <groupId>com.google.apis</groupId>
