--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
        to a groupId that we have ownership over -->
   <groupId>com.google.looker-open-source</groupId>
   <artifactId>bqjdbc</artifactId>
-  <version>2.3.27</version>
+  <version>2.3.28-SNAPSHOT</version>
   <name>Big Query over JDBC</name>
   <description>A simple JDBC driver, to reach Google's BigQuery</description>
   <properties>
@@ -109,7 +109,7 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-bigquery</artifactId>
-      <version>2.29.0</version>
+      <version>2.34.0</version>
     </dependency>
     <!-- START TEST DEPENDENCIES -->
     <dependency>
